[workspace]

[package]
name = "webgestalt"
version = "0.1.0"
authors = ["John Elizarraras"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
webgestalt_lib = { path = "webgestalt_lib" }

[profile.release]
opt-level = 3
