[workspace]

[package]
name = "webgestalt"
version = "0.2.0"
authors = ["John Elizarraras"]
edition = "2021"
rust-version = "1.63.0"
description = "CLI for computing enrichment for different analytes using ORA or GSEA."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bzhanglab/webgestalt_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.15", features = ["derive"] }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
webgestalt_lib = { version = "0.1.0", path = "webgestalt_lib" }

[profile.release]
opt-level = 3
