[workspace]

[package]
name = "webgestalt"
version = "0.3.1"
authors = ["John Elizarraras"]
edition = "2021"
rust-version = "1.63.0"
description = "CLI for computing enrichment for different analytes using ORA, GSEA, or NTA."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bzhanglab/webgestalt_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.15", features = ["derive"] }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
serde_json = "1.0.116"
webgestalt_lib = { version = "0.3.1", path = "webgestalt_lib" }

[profile.release]
opt-level = 3

[features]
default = []
experimental = ["webgestalt_lib/experimental"]