[package]
name = "webgestalt_lib"
version = "0.1.0"
authors = ["John Elizarraras"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
rand = {version= "0.8.5", features=["small_rng"]}
rayon = "1.7.0"
rustc-hash = "1.1.0"
statrs = "0.16.0"

[profile.release]
opt-level = 3
debug = 1
