[package]
name = "webgestalt_lib"
version = "0.1.0"
authors = ["John Elizarraras"]
edition = "2021"
rust-version = "1.63.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.190", features = ["std", "derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.8.0"
statrs = "0.16.0"
ahash = "0.8.6"

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = 3
