[package]
name = "webgestalt_lib"
version = "0.2.1"
authors = ["John Elizarraras"]
edition = "2021"
rust-version = "1.63.0"
description = "Library for computing enrichment for different analytes using ORA or GSEA."
license = "MIT OR Apache-2.0"
repository = "https://github.com/bzhanglab/webgestalt_rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.190", features = ["std", "derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.8.0"
statrs = "0.16.0"
ahash = "0.8.6"
ndarray = { version = "0.15.6", features = ["rayon"] }

[dev-dependencies]
pretty_assertions = "1.4.0"

[profile.release]
opt-level = 3
